2007-10-24  Mike Kestner  <mkestner@novell.com>

	* generator/SymbolTable.cs: mappings for GCallback and GSourceFunc.
	* glib/GCallback.cs: GCallback declaration.
	* glib/Source.cs: GSourceFunc declaration.

2007-10-24  Mike Kestner  <mkestner@novell.com>

	* generator/VirtualMethod.cs: clean up compiler warning and duplicate
	call.

2007-10-24  Mike Kestner  <mkestner@novell.com>

	* generator/InterfaceGen.cs: generate an Implementor prop on the
	adapters to obtain the underlying object.

2007-10-22  Mike Kestner  <mkestner@novell.com>

	* configure.in.in: add a win64 check and a compiler define for
	handling win64 32bit longs.
	* generator/LPGen.cs: use int to marshal on win64.
	* generator/LPUGen.cs: use uint to marshal on win64.
	* generator/SymbolTable.cs: remove fixme.

2007-10-16  Mike Kestner  <mkestner@novell.com>

	* gtk/CellRenderer.custom : marshal GTypes as IntPtr like the
	generator does.
	* gtk/Container.custom : ditto.  [Fixes comment #8 on 327058]

2007-10-15  Mike Kestner  <mkestner@novell.com>

	* generator/InterfaceGen.cs : gen Handle props as overrides.
	* glib/GInterfaceAdapter.cs : add abstract Handle prop.
	* glib/Value.cs: add ctor (GInterfaceAdapter).

2007-10-04  Peter Johanson  <peter@peterjohanson.com>

	* gtk/Gtk.metadata: Make the public fields on Gtk.Rcstyle writeable.

2007-10-04  Mike Kestner  <mkestner@novell.com>

	* glib/DestroyNotify.cs: add CDeclCallback to the delegate.
	* glib/Signal.cs: use DestroyHelper.
	* gdk/Input.custom: use DestroyHelper.
	* gtk/Quit.custom: remove new on DestroyHelper handler.
	* gtk/TreeModelFilter.custom: remove new on DestroyHelper handler.
	* gtk/TreeViewColumn.custom: remove new on DestroyHelper handler.

2007-10-02  Mike Kestner  <mkestner@novell.com>

	* generator/*.cs: implement the interfaces on the adapters too.
	Generate an Implementor interface for users which exposes the 
	methods to implement.  Register based on the Implementor sub-iface.