@@ -1,3 +1,9 @@
+2007-11-02  Mike Kestner  <mkestner@novell.com>
+
+	* generator/Method.cs: need to use on the Base method name to 
+	lookup complements and determine if the method is a getter or setter
+	when an explicit interface method name is used.
+
 2007-10-24  Mike Kestner  <mkestner@novell.com>
 
 	* generator/SymbolTable.cs: mappings for GCallback and GSourceFunc.
